[package]
name = "unused"
version = "0.4.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.50"
read_ctags = { path = "crates/read_ctags/" }
token_search = { path = "crates/token_search/" }
codebase_files = { path = "crates/codebase_files/" }
cli = { path = "crates/cli/" }
mimalloc = { version = "*", default-features = false, optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"

[[bin]]
name = "read-ctags"
path = "src/bin/read_ctags.rs"

[[bin]]
name = "token-search"
path = "src/bin/token_search.rs"

[[bin]]
name = "tracked-files"
path = "src/bin/codebase_files.rs"

[[bin]]
name = "unused"
path = "src/bin/unused.rs"

[workspace]
members = ["crates/*"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
