[package]
name = "cli"
version = "0.3.1"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.50"
codebase_files = { path = "../../crates/codebase_files/" }
read_ctags = { path = "../../crates/read_ctags/" }
token_search = { path = "../../crates/token_search/" }
token_analysis = { path = "../../crates/token_analysis/" }
project_configuration = { path = "../../crates/project_configuration/" }
colored = "1.9.3"
itertools = "0.9"
dirs-next = "2.0"
structopt = "0.3"
