[package]
name = "project_configuration"
version = "0.1.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
totems = "0.2.7"
dirs = "2.0"
token_search = { path = "../../crates/token_search" }
