[package]
name = "read_ctags"
version = "0.1.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
serde = { version = "1.0.105", features = ["derive"] }
