[package]
name = "token_analysis"
version = "0.1.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
token_search = { path = "../../crates/token_search/" }
read_ctags = { path = "../../crates/read_ctags/" }
project_configuration = { path = "../../crates/project_configuration/" }
serde_json = "1.0.50"
serde = { version = "1.0.105", features = ["derive"] }
itertools = "0.9"
indicatif = {version = "0.14"}

[dev-dependencies]
totems = "0.2.7"
