[package]
name = "token_search"
version = "0.1.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
codebase_files = { path = "../../crates/codebase_files" }
itertools = "0.9"
read_ctags = { path = "../../crates/read_ctags" }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
